# corev01

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.beads/: issues.jsonl  routes.jsonl
corev01/.beads/: issues.jsonl
gnnexperiments/.beads/: issues.jsonl
mayor/: rigs.json  town.json
src/corev01/: __init__.py
